<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:baselineAligned="true">

    <TextView
        android:id="@+id/textHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:baselineAligned="false"
        android:text="@string/home"
        android:textAlignment="center"
        android:textSize="15sp"
        app:drawableTopCompat="@drawable/ic_home"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textArmadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:baselineAligned="false"
        android:text="@string/armadio"
        android:textAlignment="center"
        android:textSize="15sp"
        app:drawableTopCompat="@drawable/ic_coat_hanger" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bottonAdd"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:contentDescription="@string/clickToAddContent"
        android:focusable="true"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:baselineAligned="false"
        android:text="@string/shop"
        android:textAlignment="center"
        android:textSize="15sp"
        app:drawableTopCompat="@drawable/ic_shop" />

    <TextView
        android:id="@+id/textSocial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:baselineAligned="false"
        android:text="@string/social"
        android:textAlignment="center"
        android:textSize="15sp"
        app:drawableTopCompat="@drawable/ic_social" />

</LinearLayout>